--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -15,8 +15,7 @@
         <span>
         <span class="navbar-brand font-weight-bold" th:text="${user.getName}"></span>
         <span class="navbar-brand"
-              th:text="'with roles: ' + ${user.getRoles()}"></span>
-        </span>
+              th:text="'with roles: ' + ${user.getRoles().join(', ')}"        </span>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
