--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -61,7 +61,7 @@
                             <td><p th:text="${user.getLastName()}"></p></td>
                             <td><p th:text="${user.getAge()}"></td>
                             <td><p th:text="${user.getEmail()}"></td>
-                            <td><p th:text="${user.getRoles()}"></td>
+                            <td><p th:text="${user.getRoles().replaceAll('^ROLE_', '')}"></p></td>
                         </tr>
                         </tbody>
                     </table>
